[gd_scene load_steps=2 format=3 uid="uid://wtj6383or8st"]

[ext_resource type="Script" path="res://scenes/menus/pause/menu_pause.gd" id="1_b2ods"]

[node name="MenuPause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2ods")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -50.5
offset_right = 106.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ButtonSettings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
